--- a/templates/sms_logger/smslog_search_admin.html
+++ b/templates/sms_logger/smslog_search_admin.html
@@ -52,8 +52,8 @@
  <td
    align=center
    bgcolor="[#if NEW_COLOR#]#CCCCCC[#else#]#FFFFFF[#endif#]">
-  [#if PHONE!=""#]
-   [#PHONE#]
+  [#if PHONE_TITLE!=""#]
+   [#PHONE_TITLE#]
   [#else#]
    &nbsp;
   [#endif#]
